fix(richtext-lexical): button margins too large

--- a/packages/richtext-lexical/src/field/features/Blocks/component/index.scss
+++ b/packages/richtext-lexical/src/field/features/Blocks/component/index.scss
@@ -75,10 +75,8 @@
     }
   }
 
-  &__removeButton {
+  &__removeButton.btn {
     margin: 0;
-    margin-top: 0!important;
-    margin-bottom: 0!important;
   }
 
   &__block-header {
