--- a/packages/richtext-lexical/src/field/features/Relationship/nodes/components/index.scss
+++ b/packages/richtext-lexical/src/field/features/Relationship/nodes/components/index.scss
@@ -84,10 +84,8 @@
     }
   }
 
-  &__removeButton {
+  &__removeButton.btn {
     margin: 0;
-    margin-top: 0!important;
-    margin-bottom: 0!important;
 
     line {
       stroke-width: $style-stroke-width-m;
